--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".ui.ChartActivity"
+            android:parentActivityName=".ui.MainActivity" />
+
         <service
             android:name=".sync.QuoteIntentService"
             android:exported="false" />
@@ -36,6 +40,7 @@
             android:enabled="true"
             android:exported="true"
             android:permission="android.permission.BIND_JOB_SERVICE" />
+
     </application>
 
 </manifest>
